fix: copy files from the correct folder in Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,7 +12,7 @@ RUN mkdir /app
 
 ## We copy everything in the root directory
 ## into our /app directory
-ADD ./app /app
+ADD . /app
 
 ## We specify that we now wish to execute 
 ## any further commands inside our /app
