chore: removed some tags from build-image workflow

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,6 +1,8 @@
 name: Build Docker Image
 
 on:
+  workflow_dispatch:
+    tags: [latest]
   push:
     tags:
       - 'v*.*.*'
@@ -24,9 +26,6 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
